# fairy-stockfish-egtb

./: .gitignore  CMakeLists.txt  README.md
src/: misc.cpp  psqt.cpp  search.cpp  types.h  uci.cpp  ucioption.cpp
src/egtb/: elements.cpp  tb_reader.cpp
src/syzygy/: tbprobe.cpp
